<resources>
    <string name="app_name">hw02</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_dot">.</string>
    <string name="_clr">C</string>
    <string name="_pls">+</string>
    <string name="_mns">-</string>
    <string name="_mlt">*</string>
    <string name="_div">/</string>
    <string name="_run">=</string>
    <string name="_0">0</string>
    <string name="_del"><![CDATA[<]]></string>
    <string name="background">Background</string>
    <string name="theme_switch">Переключить тему</string>
</resources>